        . After exiting Mir (by Ctrl+Alt+BkSp) VT switching by Ctrl+Alt+Fn is broken (LP: #1521651)
        . notify when cursor images are removed (LP: #1521795)
        . use EGL_fence_sync extension on the android platform (LP: #1517205)
        . fix arm64, powerpc, ppc64el builds (LP: #1522122)
        . fix locking in ms::SurfaceStack (LP: #1522105)

 -- Kevin DuBois <kevin.dubois@canonical.com>  Mon, 30 Nov 2015 14:09:31 -0500

mir (0.17.1+16.04.20151105.1-0ubuntu1) xenial; urgency=medium

  [ Alberto Aguirre ]
  * New upstream release 0.17.1 (https://launchpad.net/mir/+milestone/0.17.1)
    - No ABI changes. Bug fix release only.
    - Bugs fixed:
      . compositing never stops when external monitor is connected
        (LP: #1499039)
      . half screen on external monitor (LP: #1511538)
      . Nested servers don't apply their display configuration at startup
        (LP: #1492269)
      . libmircookie1 package does not list libnettle as dependency
        (LP: #1513225)
      . unity-system-compositor crash, no interaction on windowed mode
        (LP: #1511095)
      . mir_connection_get_egl_pixel_format() crashes (LP: #1510218)
      . [regression] mir-client-platform-mesa-dev pkg-config file dropped
        (LP: #1509005)

  [ CI Train Bot ]
  * New rebuild forced.

 -- Alberto Aguirre <alberto.aguirre@canonical.com>  Thu, 05 Nov 2015 21:54:17 +0000

mir (0.17.0+15.10.20151008.2-0ubuntu1) wily; urgency=medium

  [ Alexandros Frantzis ]
  * New upstream release 0.17.0 (https://launchpad.net/mir/+milestone/0.17.0)
    - ABI summary: Only servers and graphics drivers need rebuilding;
      . Mirclient ABI unchanged at 9
      . Mirserver ABI bumped to 35
      . Mircommon ABI unchanged at 5
      . Mirplatform ABI bumped to 11
      . Mirprotobuf ABI bumped to 3
      . Mirplatformgraphics ABI bumped to 6
      . Mirclientplatform ABI unchanged at 3
    - Enhancements:
      . Introduce libmircookie, a simple mechanism for a group of cooperating